fixed flaoting toolbar bug on ie 6 / 7
git-svn-id: http://svn.ez.no/svn/extensions/eztinymce/trunk@2741 49f50cf4-cce6-0310-bc1e-a21d999f3d8f

--- a/design/standard/stylesheets/skins/default/ui.css
+++ b/design/standard/stylesheets/skins/default/ui.css
@@ -40,7 +40,7 @@
 .defaultSkin .mceButtonDisabled .mceIcon {opacity:0.3; filter:alpha(opacity=30)}
 
 .defaultSkin div.mceToolbar span.mceToolbarElement { float: left; height: 26px; clear: none; }
-.defaultSkin div.mceToolbar div.mceToolbarGroupingElement { float: left; height: 26px; }
+.defaultSkin div.mceToolbar div.mceToolbarGroupingElement { display: inline; height: 26px; white-space: nowrap; }
 
 /* Separator */
 .defaultSkin .mceSeparator {display:block; background:url(../../../javascript/themes/ez/img/icons.gif) -180px 0; width:2px; height:20px; margin:2px 2px 0 4px}
